<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/table"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@color/white"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <TextView
        android:text="@string/intro_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="24dp"
        android:textColor="#212121"/>

    <TableRow
        android:paddingTop="10dp"
        android:gravity="center"
        >

    <Button
        android:id="@+id/nine_plus_ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine_ten"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClick"
        android:longClickable="true"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/twenty_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twenty_one"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClick"
        android:layout_margin="5dp"/>

    </TableRow>

    <TableRow
        android:paddingTop="10dp"
        android:gravity="center">


        <Button
            android:id="@+id/do_it_for_the_vine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DIFTV"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClick"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/ravioli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ravioli"
            android:onClick="onClick"
            android:layout_margin="5dp"
           />

    </TableRow>

    <TableRow
        android:paddingTop="10dp"
        android:gravity="center">


        <Button
            android:id="@+id/oh_dont_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/dont_do_it"
            android:onClick="onClick"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/omg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/omg"
            android:onClick="onClick"
            android:layout_margin="5dp"
            />


    </TableRow>

    <TableRow
        android:paddingTop="10dp"
        android:gravity="center">


        <Button
            android:id="@+id/not_my_dad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/not_my_dad"
            android:onClick="onClick"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/where_they_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/where_they_at"
            android:onClick="onClick"
            android:layout_margin="5dp"
            />


    </TableRow>



</TableLayout>
